# TCP-IP-Modbus-MQTT-app

./: README.md  config.json  pyproject.toml
communication_app/: main.py
communication_app/core/: config.py  logger.py  message_format.py
communication_app/modbus/: modbus_client.py  modbus_rtu_client.py  modbus_rtu_server.py  modbus_server.py
communication_app/mqtt/: mqtt_broker_manager.py  mqtt_client.py
communication_app/resources/: dark_theme.qss
communication_app/tcp/: tcp_client.py  tcp_server.py
communication_app/threads/: worker_threads.py
communication_app/ui/: main_window.py  modbus_panel.py  mqtt_panel.py  tcp_panel.py
config/: mosquitto.conf
tests/: test_config.py  test_message_format.py  test_modbus.py  test_mqtt.py  test_mqtt_broker.py  test_tcp.py
