[project]
name = "communication-app"
version = "1.0.0"
description = "Desktop application for managing TCP/IP, MQTT, and Modbus protocols"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "paho-mqtt>=2.0.0",
    "pymodbus>=3.6.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
communication-app = "communication_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
